--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "webcomponents.helloworld",
+  "name": "wc.poascr",
   "version": "1.0.0",
   "description": "This is a base-standard web project because is always boring start from scratch :p",
   "main": "index.js",
   "scripts": {
     "deploy": "gh-pages -d dist",
-    "build": "webpack --config webpack.dev.config.js",
+    "build": "webpack --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stevgonzalezb/WebComponents.HelloWorld.git"
+    "url": "git+https://github.com/stevgonzalezb/WC.PoasCR.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/stevgonzalezb/WebComponents.HelloWorld/issues"
+    "url": "https://github.com/stevgonzalezb/WC.PoasCR/issues"
   },
-  "homepage": "https://github.com/stevgonzalezb/WebComponents.HelloWorld#readme",
+  "homepage": "https://github.com/stevgonzalezb/WC.PoasCR#readme",
   "devDependencies": {
     "css-loader": "^5.2.6",
     "raw-loader": "^4.0.2",
